# EspoCRM

./: .gitattributes  .gitignore  AGENTS.md  README.md
archive/: .gitignore  (+1 more)
chitu-connector/: pyproject.toml
chitu-connector/chitu_connector/: __init__.py
chitu-connector/tests/: test_espocrm_brevo_api.py  test_espocrm_connector_api.py  test_espocrm_email_lifecycle.py  test_espocrm_feedback_api.py  test_espocrm_feedback_signal_export.py  test_espocrm_lifecycle_sync.py  test_espocrm_phase3c06_research_evidence_boundary.py  test_espocrm_real_client.py  test_espocrm_sync_adapter.py  test_phase3c02_2b1_worker_persistence_hardening.py  test_phase3c02_2b_acquisition_worker_core.py  test_phase3c02_2c_job_runner.py  test_phase3c03_2_provider_adapter.py  test_phase3c03_2_serper_provider.py  test_phase3c03_2_serper_runner.py  test_phase3c04_master_prospect_dedup.py  test_phase3c05_website_research_pipeline.py  test_phase3c07_enrichment_gate.py  test_phase3c07_evidence_extraction.py  test_phase3c07_research_evidence_persistence.py  test_phase3c07_runtime_acceptance.py  test_phase3c08_canonical_score_integration.py  test_phase3c08_crm_score_projection.py  test_phase3c08_runtime_acceptance.py  test_phase3c08_score_input_adapter.py  test_phase3c09_campaign_projection.py  test_phase3c09_email_draft_generation.py  test_phase3c09_outreach_input_adapter.py  test_phase3c09_outreach_runtime_acceptance.py  test_phase3c10_1_human_approval_model.py  test_phase3c10_2_send_provider_adapter.py  test_phase3c10_3_controlled_send_execution.py  test_phase3c10_4_reply_tracking_boundary.py  (+6 more)
(+848 files in other folders)
